fixed overlapping issue and styling

--- a/src/components/browse.module.css
+++ b/src/components/browse.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   margin-bottom: 100px;
 }
@@ -30,6 +30,13 @@
   overflow: hidden;
   margin-right: 10px;
   margin-bottom: 10px;
+  transition: all .2s ease-in-out;
+}
+
+.searchContainer:active, 
+.searchContainer:focus-within {
+  border: 2px solid white;
+  transition: all .2s ease-in-out;
 }
 
 .search {
@@ -58,8 +65,6 @@
   justify-content: center;
   align-items: center;
   display: flex;
-  color: white;
-  background-color: black;
   width: auto;
 }
 
@@ -73,29 +78,24 @@
   overflow: hidden;
 }
 
-.search:focus,
-.search:active {
-}
-
 .button {
   width: auto;
   background-color: black;
-  height: 2em;
+  height: 100%;
+  aspect-ratio: 1 / 1;
   font-size: 1.5em;
-  margin-right: 50px;
-  border: 2px solid gray;
-  border-radius: 10px;
-  padding-left: 5px;
-  padding-right: 5px;
+  border: 1px transparent;
+  border-left: 1px gray solid;
   color: white;
+  z-index: 10;
 }
 
 .button:hover {
   cursor: pointer;
+  background-color: darkgray;
 }
 
 .button:active {
-  transform: scale(0.9);
   background-color: gray;
 }
 
