--- a/src/components/player.module.css
+++ b/src/components/player.module.css
@@ -1,7 +1,7 @@
 .container {
   bottom: 0px;
   height: 50px;
-  width: 100vw;
+  width: 100%;
   box-sizing: content-box;
   display: flex;
   overflow: visible;
@@ -20,9 +20,7 @@
   border: transparent;
   border-radius: 50%;
   color: white;
-  margin-left: 5px;
 }
-
 
 .button:hover {
   cursor: pointer;
@@ -107,6 +105,7 @@
 .buttonContainer {
   display: flex;
   flex-direction: row;
+  min-width: 150px;
 }
 
 @media only screen and (max-width: 800px) {
